added auth swagger
