# router/router.go
@@ -1,7 +1,9 @@
 package router
 
 import (
-	userRoutes "github.com/IbadT/go-fiber.git/internal/routes/user"
+	userHandler "github.com/IbadT/go-fiber.git/internal/handlers/user"
+	"github.com/IbadT/go-fiber.git/internal/middleware"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/logger"
 )
@@ -9,5 +11,11 @@ import (
 func SetupRoutes(app *fiber.App) {
 	api := app.Group("/api", logger.New())
 
-	userRoutes.SetupUserRoutes(api)
+	// Публичные маршруты (без авторизации)
+	api.Post("/register", userHandler.RegisterUser)
+	api.Post("/login", userHandler.LoginUser)
+
+	// Защищенные маршруты (требуют авторизации)
+	protected := api.Group("/", middleware.AuthMiddleware())
+	protected.Get("/:userId", userHandler.GetUser)
 }
